# pet-selenium-chromedriver-patch

./: .editorconfig  README.md  pyproject.toml  tox.ini
docs/source/: conf.py  index.rst
doctrees/: environment.pickle  index.doctree
markdown/: index.md
selenium_chromedriver_patch/: __init__.py  __main__.py  patcher.py  settings.py
selenium_chromedriver_patch/test/: test_patcher.py
