[tool.poetry]
name = "selenium_chromedriver_patch"
version = "0.1.0"
description = ""
authors = ["XyzzyZ4p <xyzzyzap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
art = "^5.8"
tqdm = "^4.64.1"
selenium = "^4.7.2"

[tool.poetry.group.dev.dependencies]
sphinx = "^5.3.0"
sphinx-autodoc-annotation = "^1.0.post1"
sphinx-rtd-theme = "^1.1.1"
sphinx-markdown-builder = "^0.5.5"
tox = "^4.0.18"
setuptools = "^65.6.3"
build = "^0.9.0"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
